Sun Oct 28 19:12:11 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (iso8601_{ext,bas}_time): should not match
	  empty string.

Sun Oct 28 18:51:33 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date__parse): revised the tight parser.

Sun Oct 28 15:41:50 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Add :encoding option
	  to support custom XML encoding.
	  [Feature #4872] (work in progress)
	* test/rexml/test_document.rb: Add tests for the above change.

Sun Oct 28 15:00:19 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Remove needless
	  indent in document.

Sun Oct 28 14:59:14 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Accept options
	  Hash as argument.
	* test/rexml/test_document.rb: Add tests for the above change.

Sun Oct 28 14:09:44 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Fix wrong usage
	  in document.

Sun Oct 28 14:03:48 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Fix wrong method
	  names in document.

Sun Oct 28 10:12:15 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: `tree` should return the
	  same thing on every call.

	* test/psych/visitors/test_yaml_tree.rb: related test.

Sun Oct 28 10:05:03 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: YAML Tree object should
	  be able to take an emitter object as it's output.

	* test/psych/visitors/test_yaml_tree.rb: related test.

Sun Oct 28 08:23:16 2012  Koichi Sasada  <ko1@atdot.net>

	* bignum.c (bignew_1): Bignum instances are frozen.
	  Feature #3222

	* include/ruby/ruby.h: Fixnum instances are also frozen.

	* class.c (singleton_class_of): check Bignum before
	  singleton cheking.

	* test/ruby/test_bignum.rb: add a test.
